crates/brasa_parser/tests/snapshots/hardening__double_mut_yields_one_diagnostic_not_a_cascade.snap
---
source: crates/brasa_parser/tests/hardening.rs
expression: messages(&result)
---
[
    "expected a variable name, found `mut`",
]
