crates/brasa_parser/tests/snapshots/hardening__empty_parens_are_a_parse_error_not_a_zero_tuple.snap
---
source: crates/brasa_parser/tests/hardening.rs
expression: messages(&result)
---
[
    "expected an expression, found `)`",
    "expected ')' to close the parenthesized expression, found end of file",
]
