crates/brasa_parser/tests/snapshots/hardening__leading_comma_in_parens_fails_as_a_grouping.snap
---
source: crates/brasa_parser/tests/hardening.rs
expression: messages(&result)
---
[
    "expected an expression, found `,`",
    "expected ')' to close the parenthesized expression, found end of file",
]
