crates/brasa_parser/tests/snapshots/hardening__malformed_char_literal_yields_bounded_diagnostics.snap
---
source: crates/brasa_parser/tests/hardening.rs
expression: messages(&result)
---
[
    "expected an expression, found `'ab'`",
    "malformed character literal",
]
