crates/brasa_parser/tests/snapshots/hardening__mut_with_a_let_pattern_reports_once_and_recovers.snap
---
source: crates/brasa_parser/tests/hardening.rs
expression: messages(&result)
---
[
    "expected a variable name after 'mut' (destructured bindings are immutable), found `(`",
]
