crates/brasa_parser/tests/snapshots/hardening__open_paren_at_eof_reports_one_diagnostic.snap
---
source: crates/brasa_parser/tests/hardening.rs
expression: messages(&result)
---
[
    "expected an expression, found end of file",
]
