crates/brasa_parser/tests/snapshots/hardening__repeated_missing_tuple_elements_stay_bounded.snap
---
source: crates/brasa_parser/tests/hardening.rs
expression: messages(&result)
---
[
    "expected an expression, found `,`",
]
