crates/brasa_parser/tests/snapshots/hardening__reserved_word_as_param_name_yields_bounded_diagnostics.snap
---
source: crates/brasa_parser/tests/hardening.rs
expression: messages(&result)
---
[
    "expected a parameter name, found `let`",
    "expected a variable name, found `:`",
    "expected '=' in let binding, found `)`",
]
