crates/brasa_parser/tests/snapshots/hardening__unterminated_tuple_at_eof_reports_the_missing_paren.snap
---
source: crates/brasa_parser/tests/hardening.rs
expression: messages(&result)
---
[
    "expected ')' to close the tuple, found end of file",
]
